Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for xxxxx [2005-xx-xx]
==============================

 o #13402 Extended JMX support
   - Observe/change Logging

 o #13397 Added port for persistency in Firebird database
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/queue.jdbc.firebird.html
   Donated by Chris Lau ckl_88@yahoo.ca under LGPL


Changes for 1.0.4 [2005-07-04] #13388 "Xmas release patch 4"
============================================================

 o #13381 Added JMX support
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/admin.jmx.html
   - New configuration parameters
   - Changed admin interface to support operations besides propertiy getter/setter
     e.g. operation killClient() instead of getKillClient()
   - Changed getKillClient() to operation killClient()
   - Changed getKillSession() to operation killSession()
   - Added TopicHandler MBean control
   - Added TopicHandler eraseTopic and accessors administrative commands
   - SubjectInfo does subjectQueue.shutdown() now in its shutdown() instead of finalize()
   - RequestBroker.java: fixed internal login to be a session
   - Added MBean to CacheQueue implementation (not yet for RAM or JDBC)
   - CacheQueueInterceptorPlugin: Check for multiple shutdown added
   - CacheQueueInterceptorPlugin: JMX getters added

 o #13375 Bugfix FilePoller
   Added fix #13316 again, it was lost during #13325 patch

 o #13354 Windows C/C++ pthread update to 2.5.0 (http://sourceware.org/pthreads-win32/)
   Note: The library name has changed from pthreadVC.dll to pthreadVC2.dll

 o #13372 HelloWorldSubscribe
   - Added some more configuration parameters
   - Added fail safe subscribe handling (without persistent subscription)
   - Added re-subscribe on erase
   - Added extended file dump capabilities with locking


Changes for 1.0.3 [2005-05-16] #13349 "Xmas release patch 3"